adding the homepage test And some function to create the screenshot in case any fails happens